--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,5 +5,8 @@
 @import './blocks/splash.scss';
 
 @import './blocks/popup.scss';
-
+@import './blocks/advantages.scss';
+@import './blocks/main-menu.scss';
+@import './blocks/socials.scss';
+@import './blocks/hamburger-menu.scss';
 
