--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -32,11 +32,13 @@ body {
   width: 100%;
   /*max-width: 940px + 20px; */
   //min-height: 100%;
-  height: 100%;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .maincontent {
+  flex: 1;
   height: 100%;
   transition: transform 1s;
   position: relative;
@@ -90,15 +92,15 @@ table {
 }
 
 .title {
-    font-size: 48px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-    color: inherit;
-} 
+  font-size: 48px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  color: inherit;
+}
 
 .section {
-  
+
   height: 100%;
   display: flex;
   height: 100vh;
@@ -106,14 +108,13 @@ table {
   position: relative;
   width: 100%;
   border: 1px solid red;
-
-  @include phones {
-      min-height: initial;
-  } 
+@include phones {
+  min-height: initial;
+}
 }
 
 .container {
-/*  max-width: 940px; */
+  /*  max-width: 940px; */
   width: 95%;
   margin: 0 auto;
   display: flex;
@@ -123,20 +124,26 @@ table {
   position: relative;
   border: 1px solid green;
 
-    @include phones {
-      height: initial;
-    }
-
-  
-}
+  @include phones {
+   height: initial;
+ }
 
 
-footer {
-    position: relative;
-    width: 100%;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
+
+.title {
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  font-size: 16px;
+  color: inherit;
+}
+
+p {
+  color: inherit;
+}
