--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700,800&display=swap&subset=cyrillic');
 
 @import './base/mixins', './base/variables', './base/layout';
-
+@import './blocks/footer.scss';
 @import './blocks/splash.scss';
 
 @import './blocks/popup.scss';
 
+@import './base/btns.scss';
 
+@import './about/about.scss';
+@import './about/process.scss';
+@import './about/geo.scss';
+@import './about/career.scss';
+@import './about/vacancies.scss';
