styles for the products page: first draft

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,7 @@
 @import './about/geo.scss';
 @import './about/career.scss';
 @import './about/vacancies.scss';
+
+@import './products/products.scss';
+@import './products/catalog.scss';
+@import './products/organizers.scss';
