--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -144,6 +144,14 @@ table {
   color: inherit;
 }
 
+.subtitle {
+  font-size: 16px;
+  font-weight: bold;
+  color: #777b8e;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 p {
   color: inherit;
 }
