the stands page: first draft complete

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,7 @@
 @import './products/products.scss';
 @import './products/catalog.scss';
 @import './products/organizers.scss';
+
+@import './stands/pos.scss';
+@import './stands/exhibition.scss';
+@import './stands/reception.scss';
