--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,11 @@
 @import './blocks/main-menu.scss';
 @import './blocks/socials.scss';
 @import './blocks/hamburger-menu.scss';
+@import './blocks/history.scss';
+@import './blocks/title.scss';
+@import './blocks/serv-prod.scss';
+@import './blocks/portfo.scss';
+@import './blocks/technology.scss';
 
 @import './about/about.scss';
 @import './about/process.scss';
