--- a/src/styles/base/btns.scss
+++ b/src/styles/base/btns.scss
@@ -20,3 +20,13 @@
   color: #d1454d;
   font-size: 20px;
 }
+
+.btn {
+  padding: 20px 40px;
+  box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, 0.25);
+  letter-spacing: 0.12px;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.12px;
+  color: #ffffff;
+}
