--- a/src/styles/blocks/portfo.scss
+++ b/src/styles/blocks/portfo.scss
@@ -1,6 +1,6 @@
 
 .portfo {
-  background: url('../pictures/portf.png') no-repeat center center;
+  background: url('./pictures/portf.png') no-repeat center center;
   background-size: contain;
   justify-content: space-between;
   flex-direction: column;
