--- a/src/styles/blocks/serv-prod.scss
+++ b/src/styles/blocks/serv-prod.scss
@@ -1,5 +1,5 @@
 .serv-prod {
-  background: url('../pictures/serv-prod.png') no-repeat center center;
+  background: url('./pictures/serv-prod.png') no-repeat center center;
   background-size: contain;
   background-color:  #647489;
   opacity: 0.67;
