--- a/src/styles/blocks/technology.scss
+++ b/src/styles/blocks/technology.scss
@@ -1,5 +1,5 @@
 .technology {
-  background-image: url('../pictures/technology.png'); 
+  background-image: url('./pictures/technology.png'); 
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
