the ads page: layout complete

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,3 +23,5 @@
 @import './stands/pos.scss';
 @import './stands/exhibition.scss';
 @import './stands/reception.scss';
+
+@import './ads/ads.scss';
