--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -40,6 +40,7 @@ body {
 .maincontent {
   flex: 1;
   height: 100%;
+  width: 100%;
   transition: transform 1s;
   position: relative;
   //transform: translateY();
@@ -103,6 +104,9 @@ table {
 
   height: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   min-height: 650px;
   position: relative;
   width: 100%;
