--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,3 +25,9 @@
 @import './stands/reception.scss';
 
 @import './ads/ads.scss';
+@import './ads/roof.scss';
+@import './ads/signboards.scss';
+@import './ads/light.scss';
+@import './ads/neon.scss';
+@import './ads/stele.scss';
+@import './ads/auto.scss';
