--- a/src/styles/products/products.scss
+++ b/src/styles/products/products.scss
@@ -89,8 +89,12 @@
       width: 35px;
       height: 35px;
       min-width: 35px;
-      border: 1px dashed red;
       margin-right: 12px;
+
+      &--big {
+        width: 40px;
+        height: 40px;
+      }
     }
   }
 }
@@ -116,4 +120,18 @@
   width: 1px;
   border-left: 1px dashed red;
   bottom: -12%;
+}
+
+.coasters__item-icon {
+  width: 35px;
+  height: 35px;
+  fill: transparent;
+  stroke: red;
+  fill-rule: nonzero;
+  transition: 0.3s;
+
+  &--big {
+    width: 40px;
+    height: 40px;
+  }
 }
