--- a/src/styles/blocks/technology.scss
+++ b/src/styles/blocks/technology.scss
@@ -1,12 +1,13 @@
 .technology {
-  background-image: url('./pictures/technology.png'); 
+  background: linear-gradient(90deg, rgba(116, 128, 145, 0.5) 0%, rgba(116, 128, 145, 0.5) 100%), url('./pictures/technology.png'); 
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  background-color: #748091;
   flex-direction: column;
   color: white;
-  opacity: 0.67;
+  justify-content: space-between;
+
+ 
 }
 
 .title__technology {
@@ -23,6 +24,38 @@
   width: 45%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  position: relative;
+  /*  
+  &::before {
+    content: "1";  
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+    width: 30px;
+    height: 30px;
+    transform: rotate(45deg);
+    position: absolute;
+    top: -6%;
+    left: 16%;
+    background: #5f6c7d;
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+  }
+  */
+}
+
+.technology__img {
+  width: 110px;
+  height: 110px;
+  border: 1px dashed white;
 }
 
 .technology__pic {
