--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 @import './blocks/serv-prod.scss';
 @import './blocks/portfo.scss';
 @import './blocks/technology.scss';
+@import './blocks/news.scss';
 
 @import './about/about.scss';
 @import './about/process.scss';
