--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -39,13 +39,13 @@ body {
 
 .maincontent {
   flex: 1;
-  width: 100%;
   height: 100%;
+  width: 100%;
   transition: transform 1s;
   position: relative;
   //transform: translateY();
 
- // border: 1px solid blue;
+  border: 1px solid blue;
 }
 
 
@@ -104,11 +104,14 @@ table {
 
   height: 100%;
   display: flex;
-  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   min-height: 650px;
   position: relative;
   width: 100%;
- // border: 1px solid red;
+  border: 1px solid red;
+
   @include phones {
     min-height: initial;
   }
@@ -123,11 +126,11 @@ table {
   height: 100%;
   justify-content: center;
   position: relative;
-  //border: 1px solid green;
+  border: 1px solid green;
 
   @include phones {
-   height: initial;
- }
+    height: initial;
+  }
 
 
 }
@@ -143,6 +146,14 @@ table {
   text-align: center;
   font-size: 16px;
   color: inherit;
+}
+
+.subtitle {
+  font-size: 16px;
+  font-weight: bold;
+  color: #777b8e;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 p {
