--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@
 @import './about/process.scss';
 @import './about/geo.scss';
 @import './about/career.scss';
-@import './about/vacanc
+@import './about/vacanc';
 @import './posma/posma.scss';
 @import './sales-decoration/sales-decoration.scss'
 @import './products/products.scss';
