--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@
 @import './about/career.scss';
 @import './about/vacanc';
 @import './posma/posma.scss';
-@import './sales-decoration/sales-decoration.scss'
+@import './sales-decoration/sales-decoration.scss';
 @import './products/products.scss';
 @import './products/catalog.scss';
 @import './products/organizers.scss';
