the pring page: first draft complete

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,3 +33,10 @@
 @import './ads/auto.scss';
 
 @import './design/design.scss';
+
+@import './print/print.scss';
+@import './print/silk.scss';
+@import './print/embossing.scss';
+@import './print/embroidery.scss';
+@import './print/engraving.scss';
+@import './print/thermo.scss';
