fixed fonts, the products page: added corrections

--- a/src/styles/about/process.scss
+++ b/src/styles/about/process.scss
@@ -1,7 +1,7 @@
 .process {
-  font-size: 12px;
+  font-size: 14px;
   background-color: #525a6a;
-  background: url("../../pictures/process-bg.png");
+  background: url("./pictures/process-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
