--- a/src/styles/products/products.scss
+++ b/src/styles/products/products.scss
@@ -2,9 +2,20 @@
   margin-bottom: 20px;
   padding: 10px 0px;
 
-  &__title {
+  &__img {
+    background: url("./pictures/craft-bg.png");
+    width: 100%;
+    min-height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+
+  &__title,
+  &__subtitle {
     color: #777b8e;
   }
+
 
   &__intro {
     display: flex;
@@ -25,6 +36,14 @@
     span {
       text-transform: uppercase;
       font-weight: bold;
+    }
+
+    p {
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 0px;
+      }
     }
   }
 
@@ -47,7 +66,21 @@
 
     &-item {
       list-style: disc;
+      margin-left: 10px;
+      font-size: 14px;
     }
+
+    p {
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
+  }
+
+  &__list {
+    font-size: 12px;
   }
 
   &__block {
@@ -59,6 +92,10 @@
     justify-content: center;
     padding: 10px 30px;
     margin-bottom: 20px;
+
+    &--light {
+      background-color: #fff;
+    }
   }
 
   &__img {
