--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -1,13 +1,6 @@
 html {
   font-size: 16px;
 
-  @include tablets {
-    font-size: 14px;
-  }
-
-  @include phones {
-    font-size: 13px;
-  }
 }
 
 html,
@@ -84,6 +77,10 @@ h5,
 h6 {
   margin-top: 0;
   font-weight: normal;
+}
+
+p {
+  font-size: 14px;
 }
 
 table {
