--- a/src/styles/stands/exhibition.scss
+++ b/src/styles/stands/exhibition.scss
@@ -7,7 +7,7 @@
 
   &__desc {
     background-color: #f6f6f6;
-    padding: 17px 0px;
+    padding: 15px;
 
     span {
       color: #c32126;
@@ -20,6 +20,7 @@
   }
 
   &__img {
+    width: 100%;
     background-color: #edeef3;
     display: flex;
     align-items: center;
