--- a/src/styles/stands/pos.scss
+++ b/src/styles/stands/pos.scss
@@ -1,5 +1,4 @@
 .pos {
-  margin-bottom: 1.25rem;
   padding: 0.625rem 0rem;
 
   &__title {
@@ -18,11 +17,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+  }
+
+  &__img {
+    width: 100%;
+    min-height: 215px;
+    background: url("./pictures/pos-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 0;
   }
 
   &__promostands {
+    padding: 15px;
+    padding-bottom: 0;
     background-color: #f6f6f6;
-    padding-top: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,12 +46,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
   }
 
   &__offices {
+    width: 100%;
     margin-bottom: 25px;
   }
+}
+
+.stand-actions__item {
+  font-size: 14px;
 }
 
 .promostands {
@@ -56,6 +71,18 @@
     .promostands__list {
       margin-bottom: 10px;
     }
+
+  }
+
+  &__img,
+  &__bg {
+    width: 100%;
+    max-height: 480px;
+    max-width: 480px;
+  }
+
+  &__item {
+    font-size: 14px;
   }
 
 }
@@ -81,6 +108,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 30px;
   }
 
   &__main {
@@ -177,8 +205,8 @@
       position: absolute;
       z-index: 0;
       width: 100%;
-      height: 50%;
-      top: 25%;
+      height: 70%;
+      top: 15%;
       background-color: #f6f6f6;
     }
   }
