--- a/src/styles/ads/ads.scss
+++ b/src/styles/ads/ads.scss
@@ -6,7 +6,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    width: 100%;
+  }
 
+  &__img {
+    width: 100%;
+    min-height: 270px;
+    background: url("./pictures/ads-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
   }
 
   &__list {
@@ -22,6 +31,8 @@
   }
 
   &__desc {
+    padding: 15px;
+
     p {
       margin-bottom: 10px;
     }
