--- a/src/styles/ads/signboards.scss
+++ b/src/styles/ads/signboards.scss
@@ -1,12 +1,21 @@
 .signboards {
-  padding-top: 10px;
-  margin-bottom: 28px;
+  margin-bottom: 10px;
 
   &__title {
     color: #777b8e;
   }
 
+  &__img {
+    width: 100%;
+    min-height: 270px;
+    background: url("./pictures/panel-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+
   &__intro {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,9 +56,9 @@
       content: "";
       position: absolute;
       z-index: 0;
-      width: 20%;
+      width: 60%;
       height: 100%;
-      left: 40%;
+      left: 20%;
       background-color: #f6f6f6;
     }
 
