the design page: corrections added

--- a/src/styles/about/geo.scss
+++ b/src/styles/about/geo.scss
@@ -109,7 +109,7 @@
   height: 75px;
   fill: transparent;
   stroke: white;
-  fill-rule: nonzero;
+  fill-rule: evenodd;
   transition: 0.3s;
   transform: rotate(-45deg);
   margin-left: -3%;
