--- a/src/styles/design/design.scss
+++ b/src/styles/design/design.scss
@@ -12,7 +12,7 @@
   }
 
   &__img {
-    background: url("../../pictures/design-bg.png");
+    background: url("./pictures/design-bg.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -30,7 +30,7 @@
   }
 
   &__types {
-    padding: 0px 10px;
+    padding: 0px 15px;
   }
 
   &__item {
@@ -41,45 +41,6 @@
     margin-bottom: 20px;
     position: relative;
 
-    &--second:before {
-      content: "";
-      position: absolute;
-      height: 1px;
-      width: 83%;
-      border-top: 1px dashed red;
-      left: 11%;
-      top: -5%;
-    }
-
-    &--third:after {
-      content: "";
-      position: absolute;
-      height: 205%;
-      width: 1px;
-      border-right: 1px dashed red;
-      right: 2%;
-      top: -100%;
-    }
-
-    &--fourth:before {
-      content: "";
-      position: absolute;
-      height: 1px;
-      width: 92%;
-      border-top: 1px dashed red;
-      right: 3%;
-      top: -5%;
-    }
-
-    &--fourth:after {
-      content: "";
-      position: absolute;
-      height: 20%;
-      width: 1px;
-      border-left: 1px dashed red;
-      left: 4%;
-      top: -4%;
-    }
   }
 
   &__info {
@@ -109,69 +70,96 @@
     position: relative;
     background: #fff;
     z-index: 10;
-    padding: 5px;
+    width: 120px;
+    height: 120px;
+
+
+
+    &-svg {
+      width: 120px;
+      height: 120px;
+      fill: transparent;
+      stroke: #c41f25;
+      fill-rule: nonzero;
+      margin-left: -3%;
+      z-index: 10;
+    }
 
     &--right {
       margin-right: 0;
       margin-left: 10px;
-    }
 
-    &--first {
       &:before {
-        content: "1";
+        content: "";
         position: absolute;
-        display: block;
-        color: #fff;
-        top: 8%;
-        left: 13%;
+        width: 69%;
+        height: 73%;
+        top: 21%;
+        left: 7%;
+        background-color: #f6f6f6;
+        z-index: 0;
       }
 
       &:after {
         content: "";
-        position: absolute;
-        width: 1px;
-        height: 20%;
-        bottom: -5%;
-        left: 55%;
-        border-left: 1px dashed red;
-      }
-    }
-
-    &--fourth {
-      &:before {
-        content: "4";
-        position: absolute;
-        display: block;
         color: #fff;
-        top: 8%;
-        left: 13%;
-      }
-    }
-
-    &--second {
-      &:before {
-        content: "2";
+        font-size: 16px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: absolute;
-        display: block;
-        color: #fff;
-        top: 8%;
-        right: 14%;
+        transform: rotate(45deg);
+        width: 30px;
+        height: 30px;
+        top: 6%;
+        left: 68%;
+        background-color: #c41f25;
+        z-index: 10;
       }
     }
 
-    &--third {
+    &--left {
       &:before {
-        content: "3";
+        content: "";
         position: absolute;
-        display: block;
+        width: 69%;
+        height: 73%;
+        top: 21%;
+        left: 22%;
+        background-color: #f6f6f6;
+        z-index: 0;
+      }
+
+      &:after {
+        content: "";
         color: #fff;
-        top: 5%;
-        right: 14%;
+        font-size: 16px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        transform: rotate(45deg);
+        width: 30px;
+        height: 30px;
+        top: 6%;
+        left: 6%;
+        background-color: #c41f25;
+        z-index: 10;
       }
     }
 
 
 
+  }
+
+  &__list {
+    font-size: 14px;
+  }
+
+  &__about {
+    padding: 15px;
   }
 
 }
