--- a/src/styles/print/engraving.scss
+++ b/src/styles/print/engraving.scss
@@ -7,7 +7,7 @@
   }
 
   &__intro {
-    background: linear-gradient(90deg, rgba(81, 97, 120, 0.5) 0%, rgba(81, 97, 120, 0.5) 100%), url("../../pictures/engraving-bg.png");
+    background: linear-gradient(90deg, rgba(81, 97, 120, 0.5) 0%, rgba(81, 97, 120, 0.5) 100%), url("./pictures/engraving-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -21,7 +21,7 @@
 
   &__desc {
     background-color: #eceef3;
-    padding: 15px 0px;
+    padding: 15px;
 
     span {
       text-transform: uppercase;
