--- a/src/styles/print/print.scss
+++ b/src/styles/print/print.scss
@@ -7,7 +7,7 @@
   }
 
   &__bg {
-    background-image: url("../../pictures/polygraphy-bg.png");
+    background-image: url("./pictures/polygraphy-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -16,6 +16,7 @@
   }
 
   &__intro {
+    width: 100%;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
@@ -24,7 +25,7 @@
   }
 
   &__desc {
-    margin-bottom: 50px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,6 +44,8 @@
     align-items: center;
     padding: 8px 0px;
     position: relative;
+
+    margin-bottom: 50px;
 
     &:before {
       content: "";
@@ -72,7 +75,7 @@
 
   &__types {
     position: relative;
-    padding: 15px 0px;
+    padding: 15px;
     background-color: #f6f6f6;
 
     &:before {
@@ -83,7 +86,7 @@
       background-color: #f6f6f6;
       border-top: 1px solid red;
       left: 49%;
-      top: -1%;
+      top: 0;
       z-index: 5;
     }
 
