--- a/src/styles/print/silk.scss
+++ b/src/styles/print/silk.scss
@@ -7,11 +7,12 @@
 
   &__intro {
     min-height: 20.5rem;
+    width: 100%;
   }
 
   &__images {
     background: linear-gradient(90deg, rgba(81, 97, 120, 0.5) 0%, rgba(81, 97, 120, 0.5) 100%),
-url("../../pictures/silk.png");
+      url("./pictures/silk.png");
     height: 60%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -25,34 +26,34 @@ url("../../pictures/silk.png");
   }
 
   &__examples {
-  display: flex;
-  position: absolute;
-  bottom: -30%;
+    display: flex;
+    position: absolute;
+    bottom: -30%;
 
-  &-bg {
-    margin-right: 20px;
+    &-bg {
+      margin-right: 20px;
 
-    &:last-child {
-      margin-right: 0;
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
-}
 
   &__desc {
-  background-color: #eceef3;
-  padding: 15px 0px;
+    background-color: #eceef3;
+    padding: 15px;
 
-  span {
-  text-transform: uppercase;
-  color: #c3242a;
-}
+    span {
+      text-transform: uppercase;
+      color: #c3242a;
+    }
 
-p {
-  margin-bottom: 10px;
+    p {
+      margin-bottom: 10px;
 
-  &:last-child {
-    margin-bottom: 0px;
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
   }
-}
-}
 }
