the stands page: new corrections

--- a/src/styles/stands/pos.scss
+++ b/src/styles/stands/pos.scss
@@ -149,7 +149,7 @@
 
 
   &__intro {
-    background-image: url("../../pictures/office-bg.png");
+    background-image: url("./pictures/office-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
