--- a/src/styles/stands/reception.scss
+++ b/src/styles/stands/reception.scss
@@ -17,7 +17,7 @@
   &__img {
     width: 100%;
     min-height: 175px;
-    background: linear-gradient(90deg, rgba(81, 97, 120, 0.5) 0%, rgba(81, 97, 120, 0.5) 100%), url("../../pictures/reception-bg.png");
+    background: linear-gradient(90deg, rgba(81, 97, 120, 0.5) 0%, rgba(81, 97, 120, 0.5) 100%), url("./pictures/reception-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
