--- a/src/styles/ads/neon.scss
+++ b/src/styles/ads/neon.scss
@@ -25,7 +25,7 @@
   &__img {
     min-height: 265px;
     width: 100%;
-    background: linear-gradient(90deg, rgba(81, 97, 120, 0.5) 0%, rgba(81, 97, 120, 0.5) 100%), url("../../pictures/neon-bg.png");
+    background: linear-gradient(90deg, rgba(81, 97, 120, 0.5) 0%, rgba(81, 97, 120, 0.5) 100%), url("./pictures/neon-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
