--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -101,6 +101,8 @@ footer::after {
 .email__img {
   height: 25px;
   width: 25px;
+  min-width: 25px;
+  min-height: 25px;
   margin-right: 8px;
   border-radius: 50%;
   background-color: #fff;
@@ -130,8 +132,9 @@ footer::after {
 
 .schedule__img {
   height: 25px;
-  width: 27px;
-  max-width: 27px;
+  width: 25px;
+  min-width: 25px;
+  min-height: 25px;
   margin-right: 8px;
   border-radius: 50%;
   background-color: #fff;
@@ -214,6 +217,8 @@ footer::after {
 .entrepreneur__img {
   height: 36px;
   width: 36px;
+  min-width: 36px;
+  min-height: 36px;
   display: flex;
   align-items: center;
   justify-content: center;
