footer bag fixed

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -42,7 +42,7 @@ footer::before {
 
 footer::after {
   content: "";
-  background: url("../../pictures/footer-bg.png");
+  background: url("./pictures/footer-bg.png");
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
