--- a/src/styles/blocks/advantages.scss
+++ b/src/styles/blocks/advantages.scss
@@ -1,5 +1,6 @@
 .advantages {
   justify-content: center;
+  min-height: 100vh;
 }
 
 .advantages__list {
@@ -19,32 +20,21 @@
 }
 
 .advantage__img {
-  width: 22px;
-  height: 22px;
-  position: relative;
-
   margin: 20px 0;
-
-  &:before {
-    content: "";
-    display: block;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #f6f6f6;
-    transform: skew(45deg, -45deg);
-    position: absolute;
-    left: -20%;
-    top: -20%;
-  }
-
-
 }
+
 
 .advantage__pic {
-  width: 100%;
-  height: 100%;
-  display: block;
+  width: 60px;
+  height: 60px;
+  fill: transparent;
+  stroke-width: 1px;
+  stroke: #d1464d;
+  fill-rule: nonzero;
+  transition: 1s;
+
 }
+
 
 .advantage__title {
   color: #c52228;
