--- a/src/styles/blocks/hamburger-menu.scss
+++ b/src/styles/blocks/hamburger-menu.scss
@@ -5,31 +5,16 @@
 	align-items: center;
 	display: none;
 
-	@include tablets {
-		display: inline-flex;
-	}
+
 }
 
-.hamburger-menu-link__bars {
-	&, &:before, &:after {
-		background: red;
-		width: 30px;
-		height: 5px;
-		border-radius: 3px;
-	}
-
-	&:before, &:after {
-		content: "";
-		display: block;
-		position: absolute;
-	}
-
-	&:before {
-		top: 0;
-	}
-
-	&:after {
-		bottom: 0;
-	}
+.burger__pic {
+	width: 30px;
+	height: 30px;
+	fill: transparent;
+	stroke: red;
+	stroke-width: 2px;
+	fill-rule: nonzero;
+	transition: 0.3s;
 }
 
