--- a/src/styles/blocks/history.scss
+++ b/src/styles/blocks/history.scss
@@ -1,10 +1,12 @@
 .history {
+  min-height: 100vh;
   background-color: #f6f6f6;
 }
 
 .container__history {
   justify-content: space-around;
   align-items: center;
+  min-height: 100vh;
 }
 
 .history__title {
