--- a/src/styles/blocks/main-menu.scss
+++ b/src/styles/blocks/main-menu.scss
@@ -1,5 +1,8 @@
 .main-menu {
+  min-height: 100vh;
   background: #57687f;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .main-menuLeft {
@@ -9,7 +12,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px 0;
   position: relative;
 
   &::after{
@@ -27,15 +29,16 @@
 .main-menu__list {
   display: flex;
   flex-direction: column;
+  margin-top: 70px;
 }
 
 .main-menu__item {
   display: flex;
-  margin: 40px 0px;
+  margin: 20px 0px;
   border-right: 4px solid transparent;
 
   &:hover {
-    background-color: #dadee6;
+   // background-color: #dadee6;
     border-right: 4px solid red;
   }
 }
@@ -53,8 +56,21 @@
   align-items: center;
 }
 
-
 .main-menu__pic {
+  width: 30px;
+  height: 30px;
+  fill: transparent;
+  stroke: green;
+  stroke-width: 2px;
+  transition: 0.3s;
+
+  &:hover {
+    stroke: red;
+  }
+
+}
+
+.order-call__pic {
   width: 30px;
   height: 30px;
   fill: transparent;
