--- a/src/styles/blocks/serv-prod.scss
+++ b/src/styles/blocks/serv-prod.scss
@@ -1,4 +1,5 @@
 .serv-prod {
+  min-height: 100vh;
   background: url('./pictures/serv-prod.png') no-repeat center center;
   background-size: contain;
   background-color:  #647489;
@@ -56,6 +57,10 @@
 
 .serv-prod__desc {
   background-color: #eceef3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
 }
 
 .serv-prod__list {
@@ -67,7 +72,7 @@
   display: flex;
   flex-direction: column;
   width: 40%;
-  padding: 50px 0 30px;
+  padding: 20px 0 30px;
 }
 
 .serv-prod__call {
