--- a/src/styles/blocks/socials.scss
+++ b/src/styles/blocks/socials.scss
@@ -8,6 +8,9 @@
 
 */
 
+
+
+
 .socials__title {
     font-family: 'gothampro', sans-serif;
     font-size: 14px;
@@ -20,22 +23,27 @@
 .socials__list {
     display: flex;
     justify-content: space-around;
+    height: 30px;
+}
+
+.socials__list-row {
+    flex-direction: row;  
+
 }
 
 .socials__item {
     margin-right: 20px;
-    width: 23px ;
-    height: 23px;   
+    width: 100%;
+    height: 100%;
 
     &:last-child {
         margin-right: 0;
     }
 }
 
-  
 .socials__pic {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     fill: transparent;
     stroke: #3e4858;
     fill-rule: nonzero;
