--- a/src/styles/blocks/technology.scss
+++ b/src/styles/blocks/technology.scss
@@ -1,71 +1,55 @@
 .technology {
+  min-height: 100vh;
   background: linear-gradient(90deg, rgba(116, 128, 145, 0.5) 0%, rgba(116, 128, 145, 0.5) 100%), url('./pictures/technology.png'); 
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   flex-direction: column;
   color: white;
-  justify-content: space-between;
 
- 
 }
 
 .title__technology {
-  margin: 20px 0;
+  margin: 20px 0 30px;
 }
 
 .technology__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-left: 20px;
 }
 
 .technology__item {
   width: 45%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   position: relative;
-  /*  
-  &::before {
-    content: "1";  
-  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid red;
-    width: 30px;
-    height: 30px;
-    transform: rotate(45deg);
-    position: absolute;
-    top: -6%;
-    left: 16%;
-    background: #5f6c7d;
-    overflow: hidden;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-  }
-  */
+  margin-bottom: 20px;
 }
 
 .technology__img {
   width: 110px;
   height: 110px;
-  border: 1px dashed white;
+
 }
 
 .technology__pic {
   width: 100px;
   height: 100px;
   fill: transparent;
+  stroke-width: 2px;
   stroke: #d1464d;
   fill-rule: nonzero;
   transition: 1s;
 
+}
+
+.technology__text {
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 15px;
 }
 
 .technology__subtitle {
