--- a/src/styles/posma/posma.scss
+++ b/src/styles/posma/posma.scss
@@ -5,7 +5,7 @@
 }
 
 
-.pos {
+.posma {
   &__img {
   background: url("./pictures/posma.jpg");
   background-position: center center;
@@ -49,7 +49,7 @@
 
 }
 
-.title__pos {
+.title__posma {
   color: #777b8e;
   font-size: 20px;
   font-weight: 700;
@@ -70,7 +70,7 @@
   }
 }
 
-.subtitle__pos {
+.subtitle__posma {
   color: #c94d3f;
   font-size: 18px;
   font-weight: 400;
@@ -79,7 +79,7 @@
   text-align: center;
 }
 
-.pos__text {
+.posma__text {
   color: #6a6a6a;
   font-size: 12px;
   font-weight: 400;
