icons main_menu

--- a/src/styles/blocks/main-menu.scss
+++ b/src/styles/blocks/main-menu.scss
@@ -60,7 +60,7 @@
   width: 30px;
   height: 30px;
   fill: transparent;
-  stroke: green;
+  stroke: #e63f47;
   stroke-width: 2px;
   transition: 0.3s;
 
