--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -12,7 +12,7 @@ body {
   margin: 0;
   padding: 0;
   font-weight: normal;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed', 'Intro-Black', sans-serif;
   line-height: 1.42;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
