--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,8 @@
 @import './blocks/portfo.scss';
 @import './blocks/title.scss';
 @import './blocks/arrow.scss';
+@import './blocks/ordered.scss';
+@import './blocks/expo.scss';
 
 @import './about/about.scss';
 @import './about/process.scss';
