--- a/src/styles/products/catalog.scss
+++ b/src/styles/products/catalog.scss
@@ -3,6 +3,10 @@
   margin-bottom: 20px;
   padding: 10px 0px;
 
+  h3 {
+    font-size: 18px;
+  }
+
   &__list {
     display: flex;
     align-items: flex-end;
@@ -30,7 +34,7 @@
     text-align: center;
     color: #777b8e;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
   }
 
   &__title {
