--- a/src/styles/products/organizers.scss
+++ b/src/styles/products/organizers.scss
@@ -2,6 +2,10 @@
   background-color: #eceef3;
   padding: 10px 0px;
 
+  h3 {
+    font-size: 18px;
+  }
+
   &__title {
     color: #777b8e;
   }
@@ -35,13 +39,13 @@
     text-align: center;
     color: #777b8e;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
   }
 
   &__name {
     text-align: center;
     color: #777b8e;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 16px;
   }
 }
