--- a/src/styles/products/products.scss
+++ b/src/styles/products/products.scss
@@ -2,6 +2,14 @@
   margin-bottom: 20px;
   padding: 10px 0px;
 
+  h3 {
+    font-size: 18px;
+  }
+
+  &__production {
+    padding: 0px 15px;
+  }
+
   &__img {
     background: url("./pictures/craft-bg.png");
     width: 100%;
@@ -18,6 +26,7 @@
 
 
   &__intro {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,7 +35,7 @@
   }
 
   &__about {
-
+    padding: 0px 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,6 +57,7 @@
   }
 
   &__coasters {
+    padding: 0px 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -80,7 +90,7 @@
   }
 
   &__list {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   &__block {
