fonts on other pages: fixed

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -232,7 +232,9 @@ footer::after {
 .id__list,
 .address__list,
 .details__list,
-.entrepreneur__details {
+.entrepreneur__details,
+.entrepreneur__phone {
+  font-size: 14px;
 
   p,
   li {
