--- a/src/styles/print/engraving.scss
+++ b/src/styles/print/engraving.scss
@@ -2,6 +2,7 @@
   padding: 10px 0px;
 
   &__title {
+    font-size: 21px;
     color: #FFF;
     text-shadow: 0px 2px 2px rgba(0, 2, 4, 0.75);
   }
