--- a/src/styles/stands/pos.scss
+++ b/src/styles/stands/pos.scss
@@ -1,6 +1,10 @@
 .pos {
   padding: 0.625rem 0rem;
 
+  h3 {
+    font-size: 18px;
+  }
+
   &__title {
     color: #777b8e;
   }
@@ -162,17 +166,7 @@
     margin-bottom: 20px;
   }
 
-  &__type {
-    font-size: 18px;
-    font-weight: bold;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-shadow: 2px 2px 2px rgba(0, 1, 3, 0.75);
 
-    &--narrow {
-      max-width: 75px;
-    }
-  }
 
   &__slider {
     display: flex;
@@ -213,5 +207,17 @@
 
   &__bg {
     z-index: 5;
+  }
+}
+
+h3.offices__type {
+  font-size: 21px;
+  font-weight: bold;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 2px rgba(0, 1, 3, 0.75);
+
+  &--narrow {
+    max-width: 75px;
   }
 }
